--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@prisma/client": "^5.7.1",
     "@vercel/postgres": "^0.5.1",
     "debug": "^4.3.1",
+    "microcms-js-sdk": "^2.7.0",
     "next": "14.0.4",
     "next-auth": "^4.24.5",
     "react": "^18",
