--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "next start",
     "lint": "next lint",
     "postinstall": "prisma generate",
-    "build": "prisma generate && <next build>"
+    "build": "prisma generate && next build"
   },
   "dependencies": {
     "@next-auth/prisma-adapter": "^1.0.7",
