--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "next-auth": "^4.24.5",
     "react": "^18",
     "react-dom": "^18",
+    "stripe": "^14.11.0",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
