--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,11 @@
 {
 
-    "routes": [{ "src": "/(.*)", "destination": "/" }] ,
+    "routes": [
+        {
+          "src": "/(.*)",
+          "destination": "/"
+        }
+      ],
 
     "headers": [
       {
